# Starspan

./: CMakeLists.txt
cmake/: print_summary.cmake
src/: CMakeLists.txt  config.h  starspan.h  starspan_countbyclass.cc  starspan_stats.cc
src/stats/: Stats.cc
src/traverser/: polyqt.cc  traverser.cc
